# excel-vision-mcp

./: .gitignore  LICENSE  README.md  dev_server.py  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml
src/excel_mcp/: __init__.py  excel_reader.py  image_extractor.py
src/excel_vision_mcp/: server.py  utils.py
tests/: conftest.py  test_excel_reader.py  test_image_extractor.py  test_server.py  test_utils.py
