[project]
name = "excel-vision-mcp"
version = "1.0.0"
description = "MCP Server for reading Excel files with embedded image extraction. The first MCP that lets AI agents SEE images inside your spreadsheets."
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Gemini9046", email = "hoadp@voyager-hcm.com"},
]
readme = "README.md"
keywords = [
    "mcp",
    "model-context-protocol",
    "excel",
    "xlsx",
    "spreadsheet",
    "image-extraction",
    "ai-agent",
    "claude",
    "cursor",
    "openpyxl",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "openpyxl>=3.1.0",
    "openpyxl-image-loader>=1.0.5",
    "Pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/VOYAGER-Inc/excel-mcp-server"
Repository = "https://github.com/VOYAGER-Inc/excel-mcp-server"
Issues = "https://github.com/VOYAGER-Inc/excel-mcp-server/issues"

[project.scripts]
excel-vision-mcp = "excel_vision_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/excel_vision_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

# TODO: Add write capabilities in future version
